@@ -1,6 +1,32 @@
-2009-02-20
+2009-02-20 (Full)
 Make cleanup faster by having the other modules check if their paths are still in the files database instead?  it is still a lot of queries but would it be faster then checking the file system?
-  maybe instead of string compares, the IDs can be used, this would take some refactoring of each module
+	maybe instead of string compares, the IDs can be used, this would take some refactoring of each module
+Find a solution for adding files that are being browsed immediately, do a check in handles maybe for db_ modules that adds it to the database immediately if it is trying to be accessed?
+Make a class for handling CSV as the database type, make sure all the queries can refer to the statement builder
+Work on db_movies, use cUrl to download movie information from imdb, use the volume decriptor for lookup, this shouldn't change even if they edited an image
+	Research the video_ts.ifo file, there must be a way of getting the full name from a DVD image, windows media center projects can do it, so can we
+Implement %IF and %OF options for commands
+Figure out how to download files out of a zip file, maybe use an external program and set up archive.php plugin
+FIX detail options in default template
+Add support for creating thumbnails in convert.php script
+File uploading and personal folders
+	Limit access to watch and alias tables after implementing users and permissions
+FIX bt.php plugin to work with command line torrent seeder on windows
+------------- All Template stuff -------------
+Fix pretty dir paths to not be used when mod_rewrite is not used
+Add podcast list template
+Work on finishing EXT JS template, and add more templates from Ampache, Jinzora, and WinAmp Remote
+------------- EXT JS -------------
+Fix arrow-key movement in extjs template, in thumbnails view of the FolderView.js
+Add desktop.ini/folder.ini files and fix up thumbnails in FolderView.js
+Fix initial load time in FolderView.js
+Work on category view/show in groups in FolderView.js, add items that take up whole line and have headers
+Fix tooltip popup in FolderView.js, in wrong panel maybe?
+Press letter on the keyboard to go to that folder in FolderView.js and select.php
+Change desktop style to be buttons like folders in Desktop.js but render buttons to index.html
+Get settings dialog working and set up user accounts to control it
+Finished the player app that displays pictures
+Make players resize to Player window
 
 2009-02-19
 FIX state for cron script
