@@ -32,7 +32,7 @@ if(LOCAL_TEMPLATE != LOCAL_DEFAULT)
 	$files = fs_file::get(NULL, array('dir' => LOCAL_ROOT . LOCAL_TEMPLATE, 'limit' => 32000), $count, $error, true);
 	foreach($files as $i => $type_file)
 	{
-		if ($type_file[0] != '.' && !is_dir($files[$i]['Filepath']))
+		if ($type_file['Filepath'][0] != '.' && !is_dir($files[$i]['Filepath']))
 			$type_files[] = $files[$i]['Filepath'];
 	}
 }
