@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-	<title>{$smarty.const.HTML_NAME}</title>
+	<title>{$smarty.const.HTML_NAME|@htmlspecialchars}</title>
 	{literal}
     <style type="text/css">
     .loading-mask{
