@@ -1,7 +1,6 @@
 {* LIST XML "XML File List" *}
 {if $smarty.const.USE_DATABASE}{assign var=prefix value='db_'}{else}{assign var=prefix value='fs_'}{/if}
 {php}
-global $smarty;
 $ext_icons = array();
 $ext_icons['FOLDER'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/folder_96x96.png';
 $ext_icons['FILE'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/file_96x96.png';
@@ -9,8 +8,8 @@ $ext_icons['FILE'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/file_96
 $type_icons = array();
 $type_icons['audio'] = '/' . HTML_ROOT . HTML_TEMPLATE . 'images/filetypes/music_96x96.png';
 
-$smarty->assign('ext_icons', $ext_icons);
-$smarty->assign('type_icons', $type_icons);
+$this->assign('ext_icons', $ext_icons);
+$this->assign('type_icons', $type_icons);
 {/php}
 <?xml version="1.0" encoding="utf-8"?>
 <request>
