@@ -1,0 +1,3 @@
+{php}
+header('Location: /' . HTML_ROOT . HTML_PLUGINS . 'query.php');
+{/php}
